// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-document-type should create a document type 1`] = `
{
  "content": [
    {
      "text": "{"message":"Document type created successfully","id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-type should create a document type 2`] = `
{
  "hasChildren": false,
  "icon": "icon-document",
  "id": "00000000-0000-0000-0000-000000000000",
  "isElement": false,
  "isFolder": false,
  "name": "_Test DocumentType Created",
  "parent": null,
}
`;

exports[`create-document-type should create a document type with parent folder 1`] = `
{
  "content": [
    {
      "text": "{"message":"Document type created successfully","id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-type should create a document type with parent folder 2`] = `
{
  "hasChildren": false,
  "icon": "icon-document",
  "id": "00000000-0000-0000-0000-000000000000",
  "isElement": false,
  "isFolder": false,
  "name": "_Test DocumentType With Parent",
  "parent": {
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`create-document-type should create a document type with properties 1`] = `
{
  "content": [
    {
      "text": "{"message":"Document type created successfully","id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-type should create a document type with properties 2`] = `
{
  "hasChildren": false,
  "icon": "icon-document",
  "id": "00000000-0000-0000-0000-000000000000",
  "isElement": false,
  "isFolder": false,
  "name": "_Test DocumentType Created",
  "parent": null,
}
`;

exports[`create-document-type should handle existing document type 1`] = `
{
  "content": [
    {
      "text": "{"message":"Failed to create document type","status":400,"error":{"type":"Error","title":"Duplicate alias","status":400,"detail":"The specified document type alias is already in use","operationStatus":"DuplicateAlias"}}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
